--- a/indexmodalides5.html
+++ b/indexmodalides5.html
@@ -42,9 +42,9 @@
                         <i class="bi bi-house-door hover"></i>
                         <a href="#" class="link-underline link-underline-opacity-0">Dashboard</a>
                     </div>
-                    <div class="modalidades d-flex align-items-center gap-2">
-                        <i class="bi bi-star hover"></i>
-                        <a href="#" class="link-underline link-underline-opacity-0">Modalidades</a>
+                    <div class="modalidades bg-body-secondary rounded d-flex align-items-center gap-2">
+                        <i class="bi bi-star hover text-primary"></i>
+                        <a href="#" class="link-underline link-underline-opacity-0 link-primary">Modalidades</a>
                     </div>
                     <div class="borda border-bottom"></div>
                     <div class="log-out d-flex align-items-center gap-2">
@@ -67,7 +67,9 @@
                     <div class="d-flex gap-2">
                         <a id="home" class="link-underline link-underline-opacity-0" href="#">Modalidades</a>
                         <img src="assets/img/icon.svg">
-                        <p>Detalhamento da modalidade</p>
+                        <a id="home" class="link-underline link-underline-opacity-0" href="#">Natação</a>
+                        <img src="assets/img/icon.svg">
+                        <p>Cadastro</p>
                     </div>
                     <h5 class="pb-2 fw-bold border-bottom">Natação</h5>
                 </div>
