--- a/indexmodalides4.html
+++ b/indexmodalides4.html
@@ -43,8 +43,8 @@
                         <a href="#" class="link-underline link-underline-opacity-0">Dashboard</a>
                     </div>
                     <div class="modalidades d-flex align-items-center gap-2">
-                        <i class="bi bi-star hover"></i>
-                        <a href="#" class="link-underline link-underline-opacity-0">Modalidades</a>
+                        <i class="bi bi-star hover text-primary"></i>
+                        <a href="#" class="link-underline link-underline-opacity-0 link-primary">Modalidades</a>
                     </div>
                     <div class="borda border-bottom"></div>
                     <div class="log-out d-flex align-items-center gap-2">
