--- a/index3.html
+++ b/index3.html
@@ -38,17 +38,17 @@
                     <i class="bi bi-list ms-5 hover"></i>
                 </div>
                 <div class=" d-flex flex-column gap-4">
-                    <div class="dashboard d-flex align-items-center gap-2">
-                        <i class="bi bi-house-door hover"></i>
+                    <div class="dashboard d-flex align-items-center gap-2 hover">
+                        <i class="bi ps-2 bi-house-door"></i>
                         <a href="#" class="link-underline link-underline-opacity-0">Dashboard</a>
                     </div>
-                    <div class="modalidades d-flex align-items-center gap-2">
-                        <i class="bi bi-star hover"></i>
+                    <div class="modalidades d-flex align-items-center gap-2 hover">
+                        <i class="bi ps-2 bi-star"></i>
                         <a href="#" class="link-underline link-underline-opacity-0">Modalidades</a>
                     </div>
                     <div class="borda border-bottom"></div>
-                    <div class="log-out d-flex align-items-center gap-2">
-                        <i class="bi bi-box-arrow-right hover"></i>
+                    <div class="log-out d-flex align-items-center gap-2 hover">
+                        <i class="bi ps-2 bi-box-arrow-right"></i>
                         <a href="#" class="link-danger link-underline link-underline-opacity-0">Sair</a>
                     </div>
                 </div>
