--- a/indexmodalides.html
+++ b/indexmodalides.html
@@ -34,21 +34,21 @@
         <div class="col-2 d-flex flex-column justify-content-between h-100 padeiro border-end">
             <div class="nav d-flex flex-column">
                 <div class="topo d-flex justify-content-between pb-5">
-                    <img src="assets/img/awe-logo.svg" alt="">
+                    <img src="assets/img/awe-logo.svg">
                     <i class="bi bi-list ms-5 hover"></i>
                 </div>
                 <div class="options d-flex flex-column gap-4">
-                    <div class="dashboard d-flex align-items-center gap-2">
-                        <i class="bi bi-house-door hover"></i>
+                    <div class="dashboard ps-2 d-flex align-items-center gap-2 hover">
+                        <i class="bi bi-house-door"></i>
                         <a href="#" class="link-underline link-underline-opacity-0">Dashboard</a>
                     </div>
-                    <div class="modalidades d-flex align-items-center gap-2">
-                        <i class="bi bi-star hover text-primary"></i>
+                    <div class="modalidades ps-2 bg-body-secondary rounded d-flex align-items-center gap-2 hover">
+                        <i class="bi bi-star text-primary"></i>
                         <a href="#" class="link-underline link-underline-opacity-0 link-primary">Modalidades</a>
                     </div>
                     <div class="borda border-bottom"></div>
-                    <div class="log-out d-flex align-items-center gap-2">
-                        <i class="bi bi-box-arrow-right hover"></i>
+                    <div class="log-out ps-2 d-flex align-items-center gap-2 hover">
+                        <i class="bi bi-box-arrow-right"></i>
                         <a href="#" class="link-danger link-underline link-underline-opacity-0">Sair</a>
                     </div>
                 </div>
