alterando formatação da fonte do h5 nos index

--- a/indexmodalides.html
+++ b/indexmodalides.html
@@ -70,7 +70,7 @@
                         <p>Detalhamento da modalidade</p>
                     </div>
                     <div class='d-flex align-items-center justify-content-between border-bottom'>
-                        <h5 class='fw-bold'>Modalidades</h5>
+                        <h5 class='fw-semibold'>Modalidades</h5>
                         <div class='d-flex gap-3 mb-3'>
                             <button type='button' class='btn btn-outline-primary d-flex align-items-center gap-2'>
                                 <img src="assets/img/x.svg" alt="">
