--- a/indexmodalides4.html
+++ b/indexmodalides4.html
@@ -69,7 +69,7 @@
                         <img src="assets/img/icon.svg">
                         <p>Detalhamento da modalidade</p>
                     </div>
-                    <h5 class="pb-2 fw-bold border-bottom">Natação</h5>
+                    <h5 class="pb-2 fw-semibold border-bottom">Natação</h5>
                 </div>
                 <section class="d-flex gap-3 mt-3">
                     <div id="modal" class="card d-flex flex-column gap-3 border p-2">
