--- a/indexmodalides5.html
+++ b/indexmodalides5.html
@@ -18,12 +18,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@400;700&display=swap"
-        rel="stylesheet">
 
     <!-- css do projeto -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -71,7 +68,7 @@
                         <img src="assets/img/icon.svg">
                         <p>Cadastro</p>
                     </div>
-                    <h5 class="pb-2 fw-bold border-bottom">Natação</h5>
+                    <h5 class="cadastramento-categoria pb-2 fw-semibold border-bottom">Cadastramento de Categoria</h5>
                 </div>
                 <section class="d-flex gap-3 mt-3">
                     <div id="modal" class="card d-flex flex-column gap-3 border p-2">
