--- a/indexmodalides.html
+++ b/indexmodalides.html
@@ -82,6 +82,12 @@
                         </div>
                     </div>
                 </div>
+                <form class="rounded-top bg-body-secondary p-3">
+                    <div class="pesquisarbloco ms-3">
+                        <img class='iconepesquisa' src="assets/img/Pesquisa.svg" alt="">
+                        <input type="text" class='rounded p-2 ps-5 pesquisar' placeholder="Pesquise por uma modalidade">
+                    </div>
+                </form>
             </div>
         </div>
     </section>
