--- a/index2.html
+++ b/index2.html
@@ -58,7 +58,7 @@
             <div class="profile d-flex gap-2 hover">
                 <i class="bi bi-person-circle fs-3"></i>
                 <div class="pessoa">
-                    <p>Jr Programador</p>
+                    <p class="fw-bold">Jr Programador</p>
                     <p>Atleta</p>
                 </div>
             </div>
