--- a/indexmodalides.html
+++ b/indexmodalides.html
@@ -56,7 +56,7 @@
             <div class="profile d-flex gap-2 hover">
                 <i class="bi bi-person-circle fs-3"></i>
                 <div class="pessoa w-100">
-                    <p>Jr Programador</p>
+                    <p class='fw-bold'>Jr Programador</p>
                     <p>Atleta</p>
                 </div>
             </div>
