--- a/indexmodalides5.html
+++ b/indexmodalides5.html
@@ -70,7 +70,7 @@
                     </div>
                     <h5 class="cadastramento-categoria pb-2 fw-semibold border-bottom">Cadastramento de Categoria</h5>
                 </div>
-                <section class="d-flex gap-3 mt-3">
+                <section class="d-flex gap-4 mt-3">
                     <div id="modal" class="card d-flex flex-column gap-3 border p-2">
                         <figure class="pb-3 d-flex justify-content-center border-bottom w-100 align-items-center"><img src="assets/img/sport.svg"></figure>
                         <div>
@@ -82,6 +82,26 @@
                             <small>0 Atletas</small>
                         </div>
                         <a id="link-card" class="pt-3 border-top" href="#">Exibir categorias</a>
+                    </div>
+                    <div class="border col-6">
+                        <form action="get">
+                            <div>
+                                <label for="" class="form-label"></label>
+                                <input type="text" class="form-control">
+                            </div>
+                            <div>
+                                <label for="" class="form-label"></label>
+                                <input type="text" class="form-control">
+                            </div>
+                            <div>
+                                <label for="" class="form-label"></label>
+                                <input type="text" class="form-control">
+                            </div>
+                            <div>
+                                <label for="" class="form-label"></label>
+                                <input type="text" class="form-control">
+                            </div>
+                        </form>
                     </div>
                 </section>
             </div>
