terminando a segunda página 11 - cadastramento de categoria

--- a/indexmodalides5.html
+++ b/indexmodalides5.html
@@ -83,25 +83,32 @@
                         </div>
                         <a id="link-card" class="pt-3 border-top" href="#">Exibir categorias</a>
                     </div>
-                    <div class="border col-6">
-                        <form action="get">
-                            <div>
-                                <label for="" class="form-label"></label>
-                                <input type="text" class="form-control">
+                    <div class="col-6">
+                        <form action="get" class="formulario-ultima-pg p-4 border rounded">
+                            <div class="col-8 pb-3">
+                                <label for="receber" class="form-label fw-semibold">Nome</label>
+                                <input id="receber" type="text" class="form-control" placeholder="Digite o nome da categoria">
                             </div>
-                            <div>
-                                <label for="" class="form-label"></label>
-                                <input type="text" class="form-control">
+                            <label for="receber" class="form-label fw-semibold">Ocupação máxima por curso</label>
+                            <div class="col-3 pb-3">
+                                <input id="receber" type="number" class="form-control" placeholder="00">
                             </div>
-                            <div>
-                                <label for="" class="form-label"></label>
-                                <input type="text" class="form-control">
+                            <label for="receber" class="form-label fw-semibold">Limite masculino</label>
+                            <div class="col-3 pb-3">
+                                <input id="receber" type="number" class="form-control" placeholder="00">
                             </div>
-                            <div>
-                                <label for="" class="form-label"></label>
-                                <input type="text" class="form-control">
+                            <div class="col-3 pb-3">
+                                <label for="receber" class="form-label fw-semibold">Limite feminino</label>
+                                <input id="receber" type="number" class="form-control" placeholder="00">
                             </div>
                         </form>
+                        <div class="botao-azul-cadastrar d-flex justify-content-end pt-4">
+                            <a href="indexmodalides4.html">
+                                <button class="btn btn-primary fw-bold">
+                                    Cadastrar
+                                </button>
+                            </a>
+                        </div>
                     </div>
                 </section>
             </div>
