--- a/indexmodalides.html
+++ b/indexmodalides.html
@@ -97,7 +97,46 @@
                     </fieldset>
                 </form>
                 <ul class="list-group">
+                    <li class="especificações   list-group-item d-flex">
+                        <p>Modalidade</p>
+                        <p>Tipo</p>
+                        <p>Inscritos</p>
+                    </li>
+                    <li class="list-group-item d-flex align-items-center">
+                        <img src="assets/img/caracorrendo.png" alt="">
+                        <p>Corrida</p>
+                        <span class="individual badge badge-pill badge-primary">Individual</span>
+                    </li>
+                    <li class="list-group-item">
 
+                    </li>
+                    <li class="list-group-item">
+
+                    </li>
+                    <li class="list-group-item">
+
+                    </li>
+                    <li class="list-group-item">
+
+                    </li>
+                    <li class="list-group-item">
+
+                    </li>
+                    <li class="list-group-item">
+                        
+                    </li>
+                    <li class="list-group-item">
+
+                    </li>
+                    <li class="list-group-item">
+
+                    </li>
+                    <li class="list-group-item">
+
+                    </li>
+                    <li class="list-group-item">
+
+                    </li>
                 </ul>
             </div>
         </div>
