Enviando versão final

--- a/indexmodalides.html
+++ b/indexmodalides.html
@@ -98,12 +98,12 @@
                         </fieldset>
                     </form>
                     <ul class="listamodalidades list-group rounded-0 mb-2">
-                        <li class="esptitulo list-group-item d-flex gap-2">
+                        <li class="esptitulo list-group-item d-flex gap-2 pt-3 pb-3">
                             <p class="fw-bold">Modalidade</p>
                             <p class="fw-bold me-5">Tipo</p>
                             <p class="fw-bold">Inscritos</p>
                         </li>
-                        <li class="especificações list-group-item d-flex align-items-center gap-2">
+                        <li class="especificações list-group-item d-flex align-items-center gap-2 pt-3 pb-3">
                             <div class="nomemodalidade d-flex gap-4 align-items-center">
                                 <img src="assets/img/caracorrendo.png" alt="">
                                 <p>Corrida</p>
@@ -112,7 +112,7 @@
                             <p class="participantes">10 participantes</p>
                             <div class='prancheta'><img src="assets/img/prancheta.svg" alt=""></div>
                         </li>
-                        <li class="especificações list-group-item d-flex align-items-center gap-2">
+                        <li class="especificações list-group-item d-flex align-items-center gap-2 pt-3 pb-3">
                             <div class="nomemodalidade d-flex gap-4 align-items-center">
                                 <img src="assets/img/caracorrendo.png" alt="">
                                 <p>Beach Tennis</p>
@@ -121,7 +121,7 @@
                             <p class="participantes">10 participantes</p>
                             <div class='prancheta'><img src="assets/img/prancheta.svg" alt=""></div>
                         </li>
-                        <li class="especificações list-group-item d-flex align-items-center gap-2">
+                        <li class="especificações list-group-item d-flex align-items-center gap-2 pt-3 pb-3">
                             <div class="nomemodalidade d-flex gap-4 align-items-center">
                                 <img src="assets/img/caracorrendo.png" alt="">
                                 <p>Futebol 11</p>
@@ -130,7 +130,7 @@
                             <p class="participantes">10 participantes</p>
                             <div class='prancheta'><img src="assets/img/prancheta.svg" alt=""></div>
                         </li>
-                        <li class="especificações list-group-item d-flex align-items-center gap-2">
+                        <li class="especificações list-group-item d-flex align-items-center gap-2 pt-3 pb-3">
                             <div class="nomemodalidade d-flex gap-4 align-items-center">
                                 <img src="assets/img/caracorrendo.png" alt="">
                                 <p>Futsal</p>
@@ -139,7 +139,7 @@
                             <p class="participantes">10 participantes</p>
                             <div class='prancheta'><img src="assets/img/prancheta.svg" alt=""></div>
                         </li>
-                        <li class="especificações list-group-item d-flex align-items-center gap-2">
+                        <li class="especificações list-group-item d-flex align-items-center gap-2 pt-3 pb-3">
                             <div class="nomemodalidade d-flex gap-4 align-items-center">
                                 <img src="assets/img/caracorrendo.png" alt="">
                                 <p>jiu-jitsu</p>
@@ -148,7 +148,7 @@
                             <p class="participantes">10 participantes</p>
                             <div class='prancheta'><img src="assets/img/prancheta.svg" alt=""></div>
                         </li>
-                        <li class="especificações list-group-item d-flex align-items-center gap-2">
+                        <li class="especificações list-group-item d-flex align-items-center gap-2 pt-3 pb-3">
                             <div class="nomemodalidade d-flex gap-4 align-items-center">
                                 <img src="assets/img/caracorrendo.png" alt="">
                                 <p>Natação</p>
@@ -157,7 +157,7 @@
                             <p class="participantes">10 participantes</p>
                             <div class='prancheta'><img src="assets/img/prancheta.svg" alt=""></div>
                         </li>
-                        <li class="especificações list-group-item d-flex align-items-center gap-2">
+                        <li class="especificações list-group-item d-flex align-items-center gap-2 pt-3 pb-3">
                             <div class="nomemodalidade d-flex gap-4 align-items-center">
                                 <img src="assets/img/caracorrendo.png" alt="">
                                 <p>Tênis de Mesa</p>
@@ -166,7 +166,7 @@
                             <p class="participantes">10 participantes</p>
                             <div class='prancheta'><img src="assets/img/prancheta.svg" alt=""></div>
                         </li>
-                        <li class="especificações list-group-item d-flex align-items-center gap-2">
+                        <li class="especificações list-group-item d-flex align-items-center gap-2 pt-3 pb-3">
                             <div class="nomemodalidade d-flex gap-4 align-items-center">
                                 <img src="assets/img/caracorrendo.png" alt="">
                                 <p>Vôlei de quadra</p>
@@ -175,7 +175,7 @@
                             <p class="participantes">10 participantes</p>
                             <div class='prancheta'><img src="assets/img/prancheta.svg" alt=""></div>
                         </li>
-                        <li class="especificações list-group-item d-flex align-items-center gap-2">
+                        <li class="especificações list-group-item d-flex align-items-center gap-2 pt-3 pb-3">
                             <div class="nomemodalidade d-flex gap-4 align-items-center">
                                 <img src="assets/img/caracorrendo.png" alt="">
                                 <p>Xadrez</p>
