Retirando o action get

--- a/indexmodalides.html
+++ b/indexmodalides.html
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="listainsana d-flex flex-column gap-1">
-                    <form action='get' class="formcategoria rounded-top bg-body-secondary d-flex gap-2">
+                    <form class="formcategoria rounded-top bg-body-secondary d-flex gap-2">
                         <div class="pesquisarbloco ms-3">
                             <img class='iconepesquisa' src="assets/img/Pesquisa.svg" alt="">
                             <input type="text" class='rounded p-2 ps-5 pesquisar' placeholder="Pesquise por uma modalidade">
