enviando versão final da tela 10

--- a/indexmodalides3.html
+++ b/indexmodalides3.html
@@ -73,12 +73,12 @@
                 </div>
                 <section class="d-flex mt-3">
                     <div class="col-6">
-                        <form action="get" class="formulario-pg-dez p-4 border rounded">
+                        <form class="formulario-pg-dez p-4 border rounded">
                             <div class="col-8 pb-3">
                                 <label for="receber" class="form-label fw-semibold">Nome</label>
                                 <input id="receber" type="text" class="form-control" placeholder="Digite o nome da modalidade">
                             </div>
-                            <label for="receber" class="form-label fw-semibold">Tipo</label>
+                            <label for="receber" class="form-label fw-semibold pb-2">Tipo</label>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
                                 <label class="form-check-label" for="flexRadioDefault1">
@@ -91,17 +91,19 @@
                                   Individual
                                 </label>
                             </div>
-                            <label for="receber" class="form-label fw-semibold">Ícone da modalidade</label>
-                            <select class="form-select" aria-label="Default select example">
-                                <option selected>Selecione</option>
-                                <option value="1">🏊</option>
-                                <option value="2">🏐</option>
-                                <option value="3">⚽</option>
-                                <option value="4">🏃</option>
-                                <option value="5">🏀</option>
-                                <option value="6">🎾</option>
-                                <option value="7">⚾</option>
-                            </select>                          
+                            <label for="receber" class="form-label fw-semibold pt-3">Ícone da modalidade</label>
+                            <div class="select col-4">
+                                <select class="form-select" aria-label="Default select example">
+                                    <option selected>Selecione</option>
+                                    <option value="1">🏊</option>
+                                    <option value="2">🏐</option>
+                                    <option value="3">⚽</option>
+                                    <option value="4">🏃</option>
+                                    <option value="5">🏀</option>
+                                    <option value="6">🎾</option>
+                                    <option value="7">⚾</option>
+                                </select>  
+                            </div>                  
                         </form>
                         <div class="botao-azul-cadastrar d-flex justify-content-end pt-4">
                             <a href="indexmodalides.html">
