Alterando arquivos index para merge

--- a/Cadastrar-modalidade.html
+++ b/Cadastrar-modalidade.html
@@ -106,7 +106,7 @@
                             </div>                  
                         </form>
                         <div class="botao-azul-cadastrar d-flex justify-content-end pt-4">
-                            <a href="indexmodalides.html">
+                            <a href="Modalidades.html">
                                 <button class="btn btn-primary fw-bold">
                                     Cadastrar
                                 </button>
