--- a/Categorias-modalidade.html
+++ b/Categorias-modalidade.html
@@ -82,7 +82,7 @@
                             <p>Inscrições</p>
                             <small>0 Atletas</small>
                         </div>
-                        <a id="link-card" class="pt-3 border-top" href="#">Exibir categorias</a>
+                        <a id="link-card" class="pt-3 border-top" href="#">Cadastrar</a>
                     </div>
                 </section>
             </div>
